--- a/NETFLIX/index.html
+++ b/NETFLIX/index.html
@@ -4,46 +4,64 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="/css/aside.css">
+	<link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="css/medias.css">
+	<link rel="stylesheet" href="/css/footer.css">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
 	<link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">
 	<title>Netflix</title>
 </head>
 <body>
-	<header>
-		<div class="contenedor">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 276.742"><path d="M140.803 258.904c-15.404 2.705-31.079 3.516-47.294 5.676l-49.458-144.856v151.073c-15.404 1.621-29.457 3.783-44.051 5.945v-276.742h41.08l56.212 157.021v-157.021h43.511v258.904zm85.131-157.558c16.757 0 42.431-.811 57.835-.811v43.24c-19.189 0-41.619 0-57.835.811v64.322c25.405-1.621 50.809-3.785 76.482-4.596v41.617l-119.724 9.461v-255.39h119.724v43.241h-76.482v58.105zm237.284-58.104h-44.862v198.908c-14.594 0-29.188 0-43.239.539v-199.447h-44.862v-43.242h132.965l-.002 43.242zm70.266 55.132h59.187v43.24h-59.187v98.104h-42.433v-239.718h120.808v43.241h-78.375v55.133zm148.641 103.507c24.594.539 49.456 2.434 73.51 3.783v42.701c-38.646-2.434-77.293-4.863-116.75-5.676v-242.689h43.24v201.881zm109.994 49.457c13.783.812 28.377 1.623 42.43 3.242v-254.58h-42.43v251.338zm231.881-251.338l-54.863 131.615 54.863 145.127c-16.217-2.162-32.432-5.135-48.648-7.838l-31.078-79.994-31.617 73.51c-15.678-2.705-30.812-3.516-46.484-5.678l55.672-126.75-50.269-129.992h46.482l28.377 72.699 30.27-72.699h47.295z" fill="#d81f26"/></svg>
-			<nav>
-				<a href="#" class="activo">Inicio</a>
-				<a href="#">Series</a>
-				<a href="#">Películas</a>
-				<a href="#">Novedades Populares</a>
-				<a href="#">Mi lista</a>
-				<a href="#">Explora por idiomas</a>
-			</nav>
 
-			<div class="perfil">
-             aqui va el eperfil y los otros
-		</div>
-		</div>
-		
-	</header>
+	<aside class="fondo">
+		<video class="video-princi" muted autoplay poster="/img/spidi.jpg">
+			<source src="/video/SPIDER-MAN- NO WAY HOME. Tráiler Oficial HD en español. Ya en cines..mp4" type="video/mp4">
+			<img class="img-back" src="/img/spidi.jpg" alt="imagen de fondo">
+		</video>
+			<div class="contenedor">
+				<div class="menu">
+					<nav>
+						<ul class="navegacion navegacion-izquierda">
+							<li class="logo"><svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 276.742"><path d="M140.803 258.904c-15.404 2.705-31.079 3.516-47.294 5.676l-49.458-144.856v151.073c-15.404 1.621-29.457 3.783-44.051 5.945v-276.742h41.08l56.212 157.021v-157.021h43.511v258.904zm85.131-157.558c16.757 0 42.431-.811 57.835-.811v43.24c-19.189 0-41.619 0-57.835.811v64.322c25.405-1.621 50.809-3.785 76.482-4.596v41.617l-119.724 9.461v-255.39h119.724v43.241h-76.482v58.105zm237.284-58.104h-44.862v198.908c-14.594 0-29.188 0-43.239.539v-199.447h-44.862v-43.242h132.965l-.002 43.242zm70.266 55.132h59.187v43.24h-59.187v98.104h-42.433v-239.718h120.808v43.241h-78.375v55.133zm148.641 103.507c24.594.539 49.456 2.434 73.51 3.783v42.701c-38.646-2.434-77.293-4.863-116.75-5.676v-242.689h43.24v201.881zm109.994 49.457c13.783.812 28.377 1.623 42.43 3.242v-254.58h-42.43v251.338zm231.881-251.338l-54.863 131.615 54.863 145.127c-16.217-2.162-32.432-5.135-48.648-7.838l-31.078-79.994-31.617 73.51c-15.678-2.705-30.812-3.516-46.484-5.678l55.672-126.75-50.269-129.992h46.482l28.377 72.699 30.27-72.699h47.295z" fill="#d81f26"/></svg></li>
+							<li><a href="#" class="activo">Inicio</a></li>
+							<li><a href="#">Series</a></li>
+							<li><a href="#">Películas</a></li>
+							<li><a href="#">Novedades Populares</a></li>
+							<li><a href="#">Mi lista</a></li>
+							<li><a href="#">Explora por idiomas</a></li>
+						</ul>
+					</nav>
+					<nav>
+						<ul class="navegacion navegacion--derecha">
+							<li><a href="#"><img src="/img/lupa.svg" alt="Lupa"></a></li>
+							<li><a href="#">Niños</a></li>
+							<li><a href="#">adultos</a></li>
+							<li><a href="#"><img src="/img/campana.png" alt="Campana"></a></li>
+							<li class="usuario"><a href="#"><img src="/img/2606872_6139.jpg" alt="Usuario"></a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="imagotipo">
+					<div class="imagotipo--imagen">
+						
+						<h3 class="titulo">SPIDER MAN</h3>
+					<p class="descripcion">
+						Peter Parker está desenmascarado y ya no puede separar su vida normal de las altas apuestas de ser un superhéroe. Cuando le pide ayuda al Doctor Strange, lo que está en juego se vuelve aún más peligroso, lo que lo obliga a descubrir lo que realmente significa ser Spider-Man.
+					</p>
+					</div>
+					<div class="imagotipo--info">
+						<button role="button" class="boton"><i class="fas fa-play"></i> Reproducir</button>
+						<button role="button" class="boton"><i class="fas fa-info-circle"></i> Más información</button>
+					</div>
+				</div>
+			</div>
+		</aside>
 
 	<main>
-		<div class="pelicula-principal">
-			<div class="contenedor">
-				<div class="video-principal">
-					<video class="video-portada" src="/video/SPIDER-MAN- NO WAY HOME. Tráiler Oficial HD en español. Ya en cines..mp4" autoplay muted loop></video>
-
-				</div>
-				<h3 class="titulo">SPIDER MAN</h3>
-				<p class="descripcion">
-					Peter Parker está desenmascarado y ya no puede separar su vida normal de las altas apuestas de ser un superhéroe. Cuando le pide ayuda al Doctor Strange, lo que está en juego se vuelve aún más peligroso, lo que lo obliga a descubrir lo que realmente significa ser Spider-Man.
-				</p>
-				<button role="button" class="boton"><i class="fas fa-play"></i>Reproducir</button>
-				<button role="button" class="boton"><i class="fas fa-info-circle"></i>Más información</button>
-			</div>
-		</div>
+		
+		
+	
 
 		<div class="peliculas-recomendadas contenedor">
 			<div class="contenedor-titulo-controles">
@@ -238,7 +256,62 @@
 		
 	</main>
 
-	
+	<footer class="footer">
+        <div class="footer__center">
+            <div class="footer-ico">
+				<li class=""><a href="#"><img src="/img/facebook-6.svg" alt=""></a></li>
+				<li class=""><a href="#"><img src="/img/instagram-13.svg" alt=""></a></li>
+				<li class=""><a href="#"><img src="/img/twitter-3.svg" alt=""></a></li>
+				<li class=""><a href="#"><img src="/img/youtube-8.svg" alt=""></a></li>
+
+            </div>
+            <div class="footer__fila">
+                <ul class="footer__ul">
+                    <li class="footer__li"><a href="#" class="footer__a" title="Preguntas frecuentes">Preguntas frecuentes</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Centro de ayuda">Centro de ayuda</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Cuenta">Cuenta</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Zona de prensa">Zona de prensa</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Inversores">Inversores</a></li>
+                </ul>
+                <ul class="footer__ul">
+                    <li class="footer__li"><a href="#" class="footer__a" title="Empleo">Empleo</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Canjear tarjetas regalo">Canjear tarjetas regalo</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Comprar tarjetas regalo">Comprar tarjetas regalo</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Formas de ver">Formas de ver</a></li>
+                </ul>
+                <ul class="footer__ul">
+                    <li class="footer__li"><a href="#" class="footer__a" title="Términos de uso">Términos de uso</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Privacidad">Privacidad</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Preferencias de cookies">Preferencias de cookies</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Información corporativa">Información corporativa</a></li>
+                </ul>
+                <ul class="footer__ul">
+                    <li class="footer__li"><a href="#" class="footer__a" title="Contáctanos">Contáctanos</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Prueba de velocidad">Prueba de velocidad</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Avisos legales">Avisos legales</a></li>
+                    <li class="footer__li"><a href="#" class="footer__a" title="Originales de Netflix">Originales de Netflix</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__select select">
+                <svg class="select__svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm7.5-6.923c-.67.204-1.335.82-1.887 1.855A7.97 7.97 0 0 0 5.145 4H7.5V1.077zM4.09 4a9.267 9.267 0 0 1 .64-1.539 6.7 6.7 0 0 1 .597-.933A7.025 7.025 0 0 0 2.255 4H4.09zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a6.958 6.958 0 0 0-.656 2.5h2.49zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5H4.847zM8.5 5v2.5h2.99a12.495 12.495 0 0 0-.337-2.5H8.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5H4.51zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5H8.5zM5.145 12c.138.386.295.744.468 1.068.552 1.035 1.218 1.65 1.887 1.855V12H5.145zm.182 2.472a6.696 6.696 0 0 1-.597-.933A9.268 9.268 0 0 1 4.09 12H2.255a7.024 7.024 0 0 0 3.072 2.472zM3.82 11a13.652 13.652 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5H3.82zm6.853 3.472A7.024 7.024 0 0 0 13.745 12H11.91a9.27 9.27 0 0 1-.64 1.539 6.688 6.688 0 0 1-.597.933zM8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855.173-.324.33-.682.468-1.068H8.5zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.65 13.65 0 0 1-.312 2.5zm2.802-3.5a6.959 6.959 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5h2.49zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7.024 7.024 0 0 0-3.072-2.472c.218.284.418.598.597.933zM10.855 4a7.966 7.966 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4h2.355z"/>
+                </svg>
+                <div class="select__span">Español</span>
+                <!-- <ul class="select__ul">
+                    <li class="select__li">
+                        <a class="select__a" href="#" title="Español">Español</a>
+                    </li>
+                    <li class="select__li">
+                        <a class="select__a" href="#" title="English">English</a>
+                    </li>
+                </ul> -->
+            </div>
+           </div>
+            <div class="footer__fila brand">Netflix Clon Rio Software</div>
+        </div>
+    </footer>
+    
 	
 		
 	
