--- a/NETFLIX/index.html
+++ b/NETFLIX/index.html
@@ -15,9 +15,10 @@
 <body>
 
 	<aside class="fondo">
-		<video class="video-princi" muted autoplay poster="/img/spidi.jpg">
-			<!-- <source src="/video/SPIDER-MAN- NO WAY HOME. Tráiler Oficial HD en español. Ya en cines..mp4" type="video/mp4"> -->
+		<video class="video-princi" muted autoplay loop poster="/img/spidi.jpg">
 			<img class="img-back" src="/img/spidi.jpg" alt="imagen de fondo">
+			<!-- <source src="/video/SPIDER-MAN- NO WAY HOME. Tráiler Oficial HD en español. Ya en cines..mp4" type="video/mp4"> -->
+			
 		</video>
 			<div class="contenedor">
 				<div class="menu">
@@ -277,9 +278,8 @@
 				<p>Contactanos</p>
 	
 	
-			<div class="servicio">
-				<button type="button">codigo de servicios</button>
-			</div>
+				<button type="" class="servicio">codigo de servicios</button>
+			
 	
 		   </div>
 	   </div>
